target/spendcontrol-microprofile/WEB-INF/classes/META-INF/fabric8/openshift/spendcontrol-microprofile-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: spendcontrol-microprofile
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.ibm.spendcontrol
  name: spendcontrol-microprofile
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: spendcontrol-microprofile
    provider: fabric8
    group: com.ibm.spendcontrol
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        app: spendcontrol-microprofile
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.ibm.spendcontrol
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: spendcontrol-microprofile:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: thorntail-v2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - thorntail-v2
      from:
        kind: ImageStreamTag
        name: spendcontrol-microprofile:latest
    type: ImageChange
