target/spendcontrol-microprofile/WEB-INF/classes/META-INF/fabric8/openshift/spendcontrol-microprofile-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: spendcontrol-microprofile
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.ibm.spendcontrol
  name: spendcontrol-microprofile
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spendcontrol-microprofile
    provider: fabric8
    group: com.ibm.spendcontrol
