target/spendcontrol-microprofile/WEB-INF/classes/META-INF/fabric8/openshift/spendcontrol-microprofile-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: spendcontrol-microprofile
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.ibm.spendcontrol
  name: spendcontrol-microprofile
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spendcontrol-microprofile
